feat :: product-service :: Added exceptions in product service.